Summary: Marked release
svn path=/software/LOOS/trunk/; revision=15295

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2015-11-20    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Released loos-2.3.0
+
 2015-11-11    <alan@membrane.urmc.rochester.edu>
 
 	* Added lipid_lifetime.py tool to the Voronoi package
