suggest users use the mailing lists instead of just emailing us questions
svn path=/software/LOOS/trunk/; revision=15301

--- a/loos.dox
+++ b/loos.dox
@@ -25,7 +25,7 @@ Our email address has changed.  Please use loos.maintainer@gmail.com to contact 
       -  <a href="http://sourceforge.net/projects/loos">Download LOOS at http://sourceforge.net/projects/loos</a>
       -  <a href="https://lists.sourceforge.net/lists/listinfo/loos-announce">Subscribe to the announcements mailing list</a>
       -  <a href="http://sourceforge.net/projects/loos/files/loos%20material/loos_talk_2013_2.pdf/download">Download a tutorial (pdf) on using LOOS</a>
-      -  Ask the developers a question at loos.maintainer@gmail.com
+      -  Ask the developers a question at loos.maintainer@gmail.com or by posting to one of the mailing lists.
       - \subpage building "Building LOOS"
           - \ref building_pyloos "Building PyLOOS, the Python Interface to LOOS"
       - \subpage tools "Tools included with LOOS"
