Summary: Noted center-molecule change
svn path=/software/LOOS/trunk/; revision=15330

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-01-08    <tromo@hill.urmc-sh.rochester.edu>
+
+	* Fixed bug in center-molecule affecting --center_xy
+
 2016-01-07    <tromo@hill.urmc-sh.rochester.edu>
 
 	* Fixed bug in membrane_map causing alignments to be incorrect (affected height calculation)
