--- a/README
+++ b/README
@@ -28,7 +28,19 @@ This release of LOOS is a bug-fix release.  A bug was discovered in
 membrane_map that caused the z-axis of all coordinates to be set to
 0.  This affects height and vector calculations, but not density.
 
+The build system has been changed slightly.  Some compilers require
+multiple environment variables to work correctly.  In order to handle
+these cases, the LOOS build will import all environment variables into
+SCons before building.  This is *not* the SCons way to do things,
+however it makes handling these edge cases much easier.  In the event
+that these extra environment variables cause problems, you can revert
+to a mostly "clean" build environment by editing the SConstruct file.
+Starting at line 72 with "env = Environment(...)", uncomment the first
+invocation and comment out the second one.
+
 In addition, improvements were made to the documentation.
+
+
 
 
    * RELEASE 2.3.0 *
