--- a/README
+++ b/README
@@ -21,6 +21,14 @@ details.
 
 ---------------------------------------------------------------------
 
+Welcome to the GitHub version of LOOS.  This repository was
+created by converting our old SVN repository.  The SVN feature
+branches exist as refs/tags, and appear in GitHub as releases,
+but they should not be confused with the actual LOOS releases.  Those
+can be found using semantic versioning (e.g. release-2.3.1,
+release-2.3.0, ...)
+
+
 
    * RELEASE 2.3.1 *
 
