--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-06-02  Alan Grossfield <alan@membrane.urmc.rochester.edu>
+
+	* Fixed bug in cylindrical-density -- accidentally left options
+	  hardwired.
+
 2016-04-19  Alan Grossfield <alan@membrane.urmc.rochester.edu>
 
     * Added ability to write GRO files.  Added Gromacs class to pyloos
