--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-06-03  Alan Grossfield <alan@membrane.urmc.rochester.edu>
+
+	* Added new tool cylindrical-thickness
+
 2016-06-02  Alan Grossfield <alan@membrane.urmc.rochester.edu>
 
 	* Fixed bug in cylindrical-density -- accidentally left options
