updated the README to contain all 3 mailing lists

--- a/README
+++ b/README
@@ -1,10 +1,13 @@
 ===============================================================================
-= Join the LOOS mailing list for news about new LOOS releases:                =
-=     https://lists.sourceforge.net/lists/listinfo/loos-announce              =
+= Please consider joining the LOOS mailing lists:                             =
+=                                                                             =
+= New Releases: https://lists.sourceforge.net/lists/listinfo/loos-announce    =
+= User Support: https://lists.sourceforge.net/lists/listinfo/loos-users       =
+= Development:  https://lists.sourceforge.net/lists/listinfo/loos-devel       =
+=                                                                             =
+= You can also contact us directly at <loos.maintainer@gmail.com>             =
+=                                                                             =
 ===============================================================================
-
-***** Please use <loos.maintainer@gmail.com> to contact us regarding LOOS *****
-
 
 
 
