--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-06-07  Tod Romo  <tromo@hill>
+
+	* Changed how LOOS is organized (slightly).  The core library code 
+	now resides in the "src" directory.  The built shared library is
+	still stored at the top-level LOOS directory.
+
 2016-06-03  Tod Romo  <tromo@hill>
 
 	* Added HSD, HSE, and HSP to recognized residues for backbone selector
